--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/*
+/public/uploads
 /vendor
 /.idea
 /.vscode
@@ -12,3 +14,4 @@ npm-debug.log
 yarn-error.log
 .env
 .phpunit.result.cache
+
