--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "spatie/laravel-fractal": "^5.5",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-permission": "^2.37",
+        "stripe/stripe-php": "^7.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
